--- a/lawdb-frontend-react-bootstrap/src/styles/navbar.css
+++ b/lawdb-frontend-react-bootstrap/src/styles/navbar.css
@@ -3,23 +3,12 @@
     src: url('https://fonts.google.com/specimen/Lexend+Exa') format('truetype');
 }
 
-/* navbar should display as an overlay - but it appears behind the page content
- * I suspect it has something to do with the layering(?) of App.js
- */
 .navbar {
     top: 0;
-    background-color: #ffffff;
     border-bottom: #3a086b 2px solid;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
     z-index: 1;
 }
-
-/*
-to change navbar color to gradient when isCollapsed is true (WIP)
-.isCollapsed .navbar {
-  background-image: linear-gradient(to right, rgba(147, 58, 124, 0.5), rgba(40, 6, 73, 0.75));
-}
-*/
 
 .navbar-toggler {
     border: none;
@@ -30,6 +19,10 @@ to change navbar color to gradient when isCollapsed is true (WIP)
     box-shadow: none;
 }
 
+.isCollapsed {
+    background-image: linear-gradient(to right, rgba(147, 58, 124, 0.5), rgba(40, 6, 73, 0.75));
+  }
+  
 .navbar-collapse {
     background-color: #F6EFF6;
     position: absolute;
@@ -55,6 +48,7 @@ to change navbar color to gradient when isCollapsed is true (WIP)
     font-size: 16px;
     font-weight: bold;
     color: #3a086b;
+    background: #F6EFF6;
     border-color: #3a086b;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
     width: 200px;
