--- a/lawdb-frontend-react-bootstrap/src/styles/navbar.css
+++ b/lawdb-frontend-react-bootstrap/src/styles/navbar.css
@@ -43,18 +43,15 @@
     color: #3a086b;
 }
 
-.btn-outline-dark {
-    font-family: 'Lexend Exa', sans-serif;
+.nav-btn {
     font-size: 16px;
     font-weight: bold;
     color: #3a086b;
-    background: #F6EFF6;
+    background-color: #ffffff;
     border-color: #3a086b;
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
-    width: 200px;
 }
 
-.btn-outline-dark:hover {
+.nav-btn:hover {
     background-color: #6a498a;
     color: #ffffff;
 }
