log, reg, nav - responsive design + minor changes

--- a/lawdb-frontend-react-bootstrap/src/styles/login.css
+++ b/lawdb-frontend-react-bootstrap/src/styles/login.css
@@ -1,4 +1,3 @@
-/* not yet optimized for responsive view - tbc */
 .log-card {
     border-radius: 20px;
     height: 500px;
@@ -11,13 +10,23 @@
 
 #login-side {
     background-color: #6a498a;
-    border-radius: 20px;
+    border-radius: 0 20px 20px 0;
     height: 500px;
 }
 
+@media (max-width: 767px) {
+    #welcome-side {
+      border-radius: 20px 20px 0 0;
+      margin-bottom: -20px;
+    }
+  
+    #login-side {
+      border-radius: 0 0 20px 20px;
+      border-top: 2px solid #6a498a; /* Add 2px top border to compensate for the space */
+    }
+}
+
 .login-form-label {
-    font-family: 'Lexend Exa', sans-serif;
-    font-size: 20px;
     font-weight: bold;
     color: #ffffff;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
@@ -45,8 +54,9 @@
     text-decoration: none;
 }
 
-.link-light:focus {
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
+.link-light:hover {
+    text-decoration: underline;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .login-btn {
@@ -62,5 +72,4 @@
     color: #ffffff;
     background-color: #3a086b;
     border-color: #3a086b;
-    
 }
