--- a/lawdb-frontend-react-bootstrap/src/styles/general.css
+++ b/lawdb-frontend-react-bootstrap/src/styles/general.css
@@ -8,6 +8,15 @@
     src: url('https://fonts.google.com/specimen/Lexend+Exa') format('truetype');
 }
 
+@font-face {
+    font-family: 'Anonymous Pro';
+    src: url('https://fonts.google.com/specimen/Anonymous+Pro') format('truetype');
+}
+
+/* 
+ * Source Serif Pro - use for keywords, categories, links, etc.
+ */
+
 body {
     background-image: linear-gradient(rgba(141, 56, 146, 0.20), rgba(64, 16, 112, 0.20));
 }
@@ -15,6 +24,7 @@ body {
 .card {
     background-color: #ffffff;
     border-color: #6a498a;
+    border-radius: 20px;
 }
 
 .btn {
@@ -23,23 +33,57 @@ body {
     width: 200px;
 }
 
-h1 {
+@media (max-width: 360px) {
+    .form-control,
+    .btn {
+      width: 100%;
+    }
+}
+
+h1, h2, h3 {
     font-family: 'Source Serif Pro', serif;
-    font-size: 64px;
     color: #3a086b;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
+}
+
+h1 {
+    font-size: 64px;
 }
 
 h2 {
-    font-family: 'Source Serif Pro', serif;
     font-size: 40px;
+}
+
+h3 {
+    font-size: 20px;
+}
+
+h4, h5, h6, text {
+    font-family: 'Lexend Exa, sans-serif';
     color: #3a086b;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
 }
 
-h3 {
-    font-family: 'Source Serif Pro', serif;
+.form-label {
+    font-family: 'Lexend Exa', sans-serif;
     font-size: 20px;
-    color: #3a086b;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
+    font-weight: bold;
 }
+
+@media (max-width: 360px) {
+    h1 {
+      font-size: 48px;
+    }
+  
+    h2 {
+      font-size: 32px;
+    }
+  
+    h3 {
+      font-size: 16px;
+    }
+  
+    .form-label {
+      font-size: 14px;
+    }
+  }
