--- a/lawdb-frontend-react-bootstrap/src/styles/register.css
+++ b/lawdb-frontend-react-bootstrap/src/styles/register.css
@@ -3,16 +3,16 @@
     height: 670px;
     margin-top: 50px;
     padding: 60px 120px;
-}
-
-.reg-card-bg {
+  }
+  
+  .reg-card-bg {
     position: relative;
     background-repeat: no-repeat;
     background-size: 500px;
     background-position: center;
-}
-
-.reg-card-bg::before {
+  }
+  
+  .reg-card-bg::before {
     content: '';
     position: absolute;
     top: 0;
@@ -25,59 +25,74 @@
     background-position: center;
     opacity: 0.05;
     pointer-events: none;
-}
-
-.reg-form-label {
+  }
+  
+  .reg-form-label {
     font-family: 'Lexend Exa', sans-serif;
     font-size: 20px;
     font-weight: bold;
     color: #6A498A;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
-}
-
-.reg-form-label:focus {
+  }
+  
+  .reg-form-label:focus {
     color: #6A498A;
-}
-
-.input-wrapper {
+  }
+  
+  .input-wrapper {
     width: 350px;
     margin: 0 auto;
-}
+  }
   
   @media (max-width: 768px) {
+    .reg-card {
+      padding: 10px;
+    }
+  
+    .input-wrapper {
+      width: 100%;
+    }
+  }
+
+  @media (max-width: 360px) {
+    .reg-card {
+      padding: 1px;
+    }
+  
     .input-wrapper {
       width: 100%;
     }
   }
   
-.reg-form-control {
+  .reg-form-control {
     color: #3A086B;
-    
     background-color: transparent;
     border-top: none;
     border-left: none;
     border-right: none;
     border-radius: 0px;
     border-color: #3A086B;
-}
-
-.reg-form-control:focus-within {
+    width: 100%; /* Set width to 100% for smaller screens */
+  }
+  
+  .reg-form-control:focus-within {
     color: #3A086B;
     background-color: transparent;
     border-color: #3A086B;
     box-shadow: none;
-}
-
-.reg-btn {
+  }
+  
+  .reg-btn {
     font-family: 'Lexend Exa', sans-serif;
     font-size: 16px;
     font-weight: bold;
     color: #ffffff;
     background: #6A498A;
     border-color: #6A498A;
-}
-
-.reg-btn:hover {
+  }
+  
+  .reg-btn:hover {
     background-color: #3A086B;
     color: #ffffff;
-}
+  }
+  
