--- a/lawdb-frontend-react-bootstrap/src/styles/navbar.css
+++ b/lawdb-frontend-react-bootstrap/src/styles/navbar.css
@@ -16,6 +16,7 @@
 
 .isCollapsed {
     background-image: linear-gradient(to right, rgba(147, 58, 124, 0.5), rgba(40, 6, 73, 0.5));
+    transition:.1s ease-in-out;
 }
   
 .navbar-collapse {
@@ -29,6 +30,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
+    transition: linear 0.1s;
 }
 
 .navbar-brand {
@@ -55,4 +57,11 @@
     font-family: 'Lexend Exa', sans-serif;
     font-size: 16px;
     color: #3a086b;
+    font-weight: bold;
+    padding-bottom: 30px;
+}
+
+.nav-link:hover {
+    color: #6a498a;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
 }
