--- a/lawdb-frontend-react-bootstrap/src/styles/search.css
+++ b/lawdb-frontend-react-bootstrap/src/styles/search.css
@@ -2,6 +2,11 @@
     background-image: linear-gradient(rgba(141, 56, 146, 0.34), rgba(64, 16, 112, 0.50),rgba(58, 8, 107, 1));
 }
 
+.search-body {
+    flex: 1;
+    overflow-y: auto;
+  }
+
 .search-bar {
     background-color: #ffffff;
     border: none;
@@ -11,6 +16,14 @@
     padding-left: 10px;
 }
 
+.search-form-control {
+    color: #3A086B;
+    background-color: transparent;
+    outline: transparent;
+    border-color: transparent;
+    width: 100%;
+}
+
 .search-btn {
     background-color: transparent;
     width: fit-content;
@@ -18,10 +31,57 @@
     margin: none;
     box-shadow: none;
     border-radius: 100%;
-    margin-left: 170px;
     cursor: pointer;
 }
 
 .search-btn:active {
     border: none;
+    outline: none;
 }
+
+.fa-circle-arrow-down {
+    width: 50px;
+    height: 50px;
+    padding-top: 15px;
+}
+
+.fa-circle-arrow-down:hover {
+    color: #ac7bde;
+}
+
+.adv-search-body {
+    flex: 1;
+    overflow-y: auto;
+  }
+
+.form-select {
+    color: #ffffff;
+    background-color: transparent;
+    appearance: none; 
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23ffffff' height='24' viewBox='0 0 24 24' width='24'%3E%3Cpath d='M7 10l5 5 5-5z'/%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3C/svg%3E");
+    background-position: right 0.5rem top 50%;
+    background-repeat: no-repeat;
+    background-size: 12px;
+    padding-right: 20px;
+}
+ 
+  .form-select::-ms-expand {
+    display: none;
+  }
+
+  .form-select option {
+    color: #3A086B; 
+    background-color: #ffffff; 
+  }
+  
+  .form-select option:checked {
+    color: #ffffff;
+    background-color: #3A086B;
+  }
+  
+ 
+  #search-categories:focus {
+    outline: none;
+  }
