--- a/lawdb-frontend-react-bootstrap/src/styles/general.css
+++ b/lawdb-frontend-react-bootstrap/src/styles/general.css
@@ -13,13 +13,17 @@
     src: url('https://fonts.google.com/specimen/Anonymous+Pro') format('truetype');
 }
 
-/* 
- * Source Serif Pro - use for keywords, categories, links, etc.
- */
-
-body {
+.default-bg {
     background-image: linear-gradient(rgba(141, 56, 146, 0.20), rgba(64, 16, 112, 0.20));
-    margin: 0;
+}
+
+.search-bg {
+    background-image: linear-gradient(rgba(141, 56, 146, 0.34), rgba(64, 16, 112, 0.50),rgba(58, 8, 107, 1));
+    height: 200vh;
+}
+
+.white-bg {
+    background-color: #ffffff;
 }
 
 .card {
@@ -49,6 +53,8 @@ button:focus {
     }
 }
 
+/* Source Serif 4 - Larger Headings (h1, h2, h3) , form label, & Body Text  */
+
 h1, h2, h3 {
     font-family: 'Source Serif 4', serif;
     color: #3a086b;
@@ -67,26 +73,50 @@ h3 {
     font-size: 20px;
 }
 
+.form-label {
+    font-family: 'Lexend Exa', sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+p {
+    font-family: 'Source Serif 4', serif;
+    font-size: 18px;
+    color: #000000;
+}
+
+/* Lexend Exa - Smaller Headings (h4, h5)*/
+
 h4, h5 {
     font-family: 'Lexend Exa', sans-serif;
+    color: #3a086b;
+    letter-spacing: 5px;
 }
 
 h4 {
     font-size: 20px;
-    color: #3a086b;
     font-weight: bold;
-    letter-spacing: 5px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
 }
 
 h5 {
     font-size: 16px;
-    color: #000000;
-    letter-spacing: 10%;
-    letter-spacing: 5px;
+    font-weight: bolder;
 }
 
-h6, a, li, span, option, select, button, label {
+
+/* Anonymous Pro - h6, smaller text (a, li, span, etc.) */
+
+h6, 
+a,
+li, 
+span, 
+option, 
+select, 
+button, 
+label,
+.results-found,
+.keywords {
   font-family: 'Anonymous Pro', monospace;
 }
 
@@ -95,10 +125,10 @@ h6  {
     color: #ffffff;
 }
 
-.form-label {
-    font-family: 'Lexend Exa', sans-serif;
-    font-size: 20px;
-    font-weight: bold;
+.results-found,
+.keywords {
+    font-size: 14px;
+    color: #432575;
 }
 
 @media (max-width: 360px) {
