search + results - styling; comments for backend

--- a/lawdb-frontend-react-bootstrap/src/styles/search.css
+++ b/lawdb-frontend-react-bootstrap/src/styles/search.css
@@ -4,6 +4,12 @@
     height: 100vh;
 }
 
+.login-logo {
+    width: 75px;
+    height: 75px;
+    object-fit: contain;
+}
+
 .search-body {
     flex: 1;
     height: 100vh;
