--- a/lawdb-frontend-react-bootstrap/src/styles/navbar.css
+++ b/lawdb-frontend-react-bootstrap/src/styles/navbar.css
@@ -49,6 +49,12 @@
     border-color: #3a086b;
 }
 
+@media (max-width: 350px) {
+    .navbar-brand {
+      font-size: 12px;
+    }
+}
+
 .nav-btn:hover {
     background-color: #6a498a;
     color: #ffffff;
