--- a/lawdb-frontend-react-bootstrap/src/styles/general.css
+++ b/lawdb-frontend-react-bootstrap/src/styles/general.css
@@ -38,18 +38,26 @@ body {
     border-radius: 20px;
 }
 
+hr {
+    color: #432575;
+}
+
 .btn {
-    font-family: 'Lexend Exa', sans-serif;
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
+    font-family: 'Anonymous Pro', monospace;
+    box-shadow: none;
     width: 200px;
+}
+
+.form-control {
+    border-color:#432575;
 }
 
 .form-control:focus,
 .form-select:focus,
 select:focus,
 button:focus {
-  box-shadow: none;
-  border-color: #ffffff;
+    border-color: #432575;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
 }
 
 .link-style {
@@ -100,21 +108,22 @@ p {
 
 /* Lexend Exa - Smaller Headings (h4, h5); form label */
 
-h4, h5 {
+h4, h5, h6 {
     font-family: 'Lexend Exa', sans-serif;
     color: #3a086b;
-    letter-spacing: 5px;
 }
 
 h4 {
     font-size: 20px;
     font-weight: bold;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
+    letter-spacing: 5px;
 }
 
 h5 {
     font-size: 16px;
     font-weight: bolder;
+    letter-spacing: 5px;
 }
 
 .form-label {
@@ -123,9 +132,9 @@ h5 {
     font-weight: bold;
 }
 
-/* Anonymous Pro - h6, smaller text (a, li, span, etc.) */
+/* Anonymous Pro - smaller text (a, li, span, etc.) */
 
-h6, 
+h6,
 a,
 li, 
 span, 
@@ -139,8 +148,13 @@ button,
 
 h6  {
     font-size: 16px;
-    color: #ffffff;
+    /* color: #ffffff; */
 }
+
+a:focus, a::selection {
+    outline: none;
+    background-color: transparent;
+  }
 
 .results-found,
 .keywords {
