--- a/lawdb-frontend-react-bootstrap/src/styles/navbar.css
+++ b/lawdb-frontend-react-bootstrap/src/styles/navbar.css
@@ -1,6 +1,6 @@
 .navbar {
     top: 0;
-    height: 80px;
+    height: 75px;
     border-bottom: #3a086b 2px solid;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
     z-index: 1;
@@ -39,6 +39,23 @@
     font-size: 16px;
     font-weight: bold;
     color: #3a086b;
+}
+
+.usr-btn{
+    font-size: 16px;
+    font-weight: bold;
+    color: #3a086b;
+    background-color: transparent;
+    border: none;
+}
+
+.usr-btn:hover {
+    color: #000000;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
+}
+
+.user-icon {
+    margin-right: 15px;
 }
 
 .nav-btn {
