--- a/lawdb-frontend-react-bootstrap/src/styles/admin.css
+++ b/lawdb-frontend-react-bootstrap/src/styles/admin.css
@@ -1,6 +1,8 @@
+/* admin.css */
+
 .law-container {
     display: flex;
-    gap: 10px; /* Adjust the gap value as needed */
+    gap: 10px;
 }
 
 .law-list-container {
