--- a/lawdb-frontend-react-bootstrap/src/styles/general.css
+++ b/lawdb-frontend-react-bootstrap/src/styles/general.css
@@ -1,17 +1,17 @@
 /* general.css */
 @font-face {
     font-family: 'Source Serif 4';
-    src: url('https://fonts.google.com/specimen/Source+Serif+4') format('truetype');
+    src: url('./fonts/SourceSerif4.ttf') format('truetype');
 }
 
 @font-face {
     font-family: 'Lexend Exa';
-    src: url('https://fonts.google.com/specimen/Lexend+Exa') format('truetype');
+    src: url('./fonts/LexendExa.ttf') format('truetype');
 }
 
 @font-face {
     font-family: 'Anonymous Pro';
-    src: url('https://fonts.google.com/specimen/Anonymous+Pro') format('truetype');
+    src: url('./fonts/AnonymousPro.ttf') format('truetype');
 }
 
 body {
