--- a/lawdb-frontend-react-bootstrap/src/styles/searchResults.css
+++ b/lawdb-frontend-react-bootstrap/src/styles/searchResults.css
@@ -1,5 +1,6 @@
-.results-found {
-  margin-inline-start: 20px;
+.small-text {
+  font-family: 'Anonymous Pro', monospace;
+  font-size: 16px;
 }
 
 .law-item:hover {
