--- a/lawdb-frontend-react-bootstrap/src/styles/search.css
+++ b/lawdb-frontend-react-bootstrap/src/styles/search.css
@@ -6,18 +6,11 @@
 
 .search-body {
     flex: 1;
-    height: 100vh;
-    margin: 30vh 0 25vh 0;
-    padding: 0 10vw 0 10vw;
-}
-
-.adv-search-body {
-    height: 100vh;
     margin: 25vh 0 25vh 0;
     padding: 0 10vw 0 10vw;
 }
 
-.search-bar {
+.search-input {
     background-color: #ffffff;
     border: none;
     border-radius: 50px;
@@ -29,9 +22,14 @@
 .search-form-control {
     color: #3A086B;
     background-color: transparent;
-    outline: transparent;
-    border-color: transparent;
-    width: 100%;
+    border: none;
+    box-shadow: none;
+    width: fit-content;
+}
+
+.search-form-control:focus, .form-select:focus {
+    outline: none;
+    box-shadow: none;
 }
 
 .search-btn {
@@ -39,8 +37,8 @@
     width: fit-content;
     padding: none;
     margin: none;
+    border: none;
     box-shadow: none;
-    border-radius: 100%;
     cursor: pointer;
 }
 
@@ -49,39 +47,27 @@
     outline: none;
 }
 
-.fa-circle-arrow-down {
-    width: 50px;
-    height: 50px;
-    padding-top: 15px;
-}
-
-.fa-circle-arrow-down:hover {
-    color: #3A086B;
-}
-
-.form-select {
-    color: #ffffff;
+.form-selection {
+    color:#3A086B;
     background-color: transparent;
-    appearance: none; 
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23ffffff' height='24' viewBox='0 0 24 24' width='24'%3E%3Cpath d='M7 10l5 5 5-5z'/%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3C/svg%3E");
-    background-position: right 0.5rem top 50%;
-    background-repeat: no-repeat;
-    background-size: 12px;
-    padding-right: 20px;
+    border-color: #3A086B;
+    border-radius: 50px;
+    outline: none;
+    height: fit-content;
+    width: auto;
+    padding:7px;
 }
  
-.form-select::-ms-expand {
+.form-selection::-ms-expand {
   display: none;
 }
 
-.form-select option {
+.form-selection option {
   color: #3A086B; 
   background-color: #ffffff; 
 }
 
-.form-select option:checked {
+.form-selection option:checked {
   color: #ffffff;
   background-color: #3A086B;
 }
