--- a/lawdb-frontend-react-bootstrap/src/styles/search.css
+++ b/lawdb-frontend-react-bootstrap/src/styles/search.css
@@ -1,70 +1,69 @@
+/* search.css */
+
 .login-logo {
-    width: 75px;
-    height: 75px;
-    object-fit: contain;
+  width: 75px;
+  height: 75px;
+  object-fit: contain;
 }
 
 .search-body {
-    flex: 1;
-    margin: 25vh 0 25vh 0;
-    padding: 0 10vw 0 10vw;
+  flex: 1;
+  margin: 25vh 0;
+  padding: 0 10vw;
 }
 
 .search-input {
-    background-color: #ffffff;
-    border: none;
-    border-radius: 50px;
-    outline: none;
-    width: auto;
-    padding-left: 10px;
+  background-color: #ffffff;
+  border: none;
+  border-radius: 50px;
+  outline: none;
+  padding: 0.15rem 1rem;
 }
 
 .search-form-control {
-    color: #3A086B;
-    background-color: transparent;
-    border: none;
-    box-shadow: none;
-    width: fit-content;
+  color: #3A086B;
+  background-color: transparent;
+  border: none;
+  box-shadow: none;
+  width: fit-content;
+  margin: 0 0.25rem;
 }
 
-.search-form-control:focus, .form-select:focus {
-    outline: none;
-    box-shadow: none;
+.search-form-control:focus {
+  box-shadow: none;
 }
 
 .search-btn {
-    background-color: transparent;
-    width: fit-content;
-    padding: none;
-    margin: none;
-    border: none;
-    box-shadow: none;
-    cursor: pointer;
+  background-color: transparent;
+  border: none;
+  box-shadow: none;
+  cursor: pointer;
+  padding: 0;
+  margin: 0;
+  width: fit-content;
 }
 
 .search-btn:active {
-    border: none;
-    outline: none;
+  outline: none;
 }
 
 .form-selection {
-    color:#3A086B;
-    background-color: transparent;
-    border-color: #3A086B;
-    border-radius: 50px;
-    outline: none;
-    height: fit-content;
-    width: auto;
-    padding:7px;
+  color: #3A086B;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  height: fit-content;
+  width: auto;
+  padding: 7px;
 }
- 
+
 .form-selection::-ms-expand {
   display: none;
 }
 
 .form-selection option {
-  color: #3A086B; 
-  background-color: #ffffff; 
+  color: #3A086B;
+  background-color: #ffffff;
 }
 
 .form-selection option:checked {
