search bar in results; before trying new component

--- a/lawdb-frontend-react-bootstrap/src/styles/general.css
+++ b/lawdb-frontend-react-bootstrap/src/styles/general.css
@@ -172,6 +172,7 @@ h5 {
 /* Smaller text */
 h6, a, li, option, select, button, .small-text, .keywords {
   font-family: 'Anonymous Pro', monospace;
+  font-weight: bold;
 }
 
 h6 {
