dropdown distinction WIP (forgot from last commit)

--- a/lawdb-frontend-react-bootstrap/src/styles/search.css
+++ b/lawdb-frontend-react-bootstrap/src/styles/search.css
@@ -50,7 +50,7 @@
 .form-selection {
   color: #3A086B;
   background-color: transparent;
-  border: none;
+  border: #3A086B solid 1px;
   outline: none;
   height: fit-content;
   width: auto;
