--- a/lawdb-frontend-react-bootstrap/src/styles/navbar.css
+++ b/lawdb-frontend-react-bootstrap/src/styles/navbar.css
@@ -24,7 +24,12 @@
   font-family: 'Lexend Exa', sans-serif;
   font-size: 16px;
   font-weight: bold;
+  border-bottom: #3a086b 2px solid;
   color: #3a086b;
+  &:hover {
+    color: #6a498a;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
+  }
   @media (max-width: 350px) {
     font-size: 12px;
   }
@@ -41,9 +46,28 @@
   }
 }
 
-.dropdown-menu {
-  background-color: #f6eff6;
-  border: 1px solid #6a498a;
+#navbarBrandDropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #f1f1f1;
+
 }
 
 .dropdown-item {
