--- a/lawdb-frontend-react-bootstrap/src/styles/navbar.css
+++ b/lawdb-frontend-react-bootstrap/src/styles/navbar.css
@@ -24,7 +24,6 @@
   font-family: 'Lexend Exa', sans-serif;
   font-size: 16px;
   font-weight: bold;
-  border-bottom: #3a086b 2px solid;
   color: #3a086b;
   &:hover {
     color: #6a498a;
@@ -46,14 +45,14 @@
   }
 }
 
-#navbarBrandDropdown:hover .dropdown-content {
+#navbar-dropdown:hover .dropdown-content {
   display: block;
 }
 
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: #ffffff;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
