--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -21,21 +21,23 @@ body {
 }
 
 /* Backgrounds */
+.default-bg, .search-bg {
+  background-attachment: fixed;
+}
+
 .default-bg {
   background-image: linear-gradient(rgba(141, 56, 146, 0.20), rgba(64, 16, 112, 0.20));
-  background-attachment: fixed;
 }
 
 .search-bg {
   background-image: linear-gradient(rgba(141, 56, 146, 0.34), rgba(64, 16, 112, 0.40), rgba(58, 8, 107, 0.75));
 }
 
-.white-bg {
+.white-bg, .card {
   background-color: #ffffff;
 }
 
 .card {
-  background-color: #ffffff;
   border-color: #6a498a;
   border-radius: 20px;
 }
@@ -45,8 +47,7 @@ hr {
 }
 
 /* button styles */
-.btn,
-.btn-link {
+.btn, .btn-link {
   font-family: 'Anonymous Pro', monospace;
   box-shadow: none;
   border-color: rgba(146, 99, 179, 0.25);
@@ -62,8 +63,7 @@ hr {
   color: #3A086B;
 }
 
-.edit-btn,
-.save-btn {
+.edit-btn, .save-btn {
   font-size: 16px;
   font-weight: bold;
   color: #ffffff;
@@ -89,47 +89,39 @@ hr {
 }
 
 /* form styles */
-.form-control,
-.form-selection,
-select,
-button {
+.form-control, .form-selection, select, button {
   border-color: #432575;
 }
 
-.form-control:focus,
-.form-selection:focus,
-select:focus,
-button:focus {
+.form-control:focus, .form-selection:focus, select:focus, button:focus {
   border-color: #432575;
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
+  outline: none;
 }
 
 .form-check-input {
-  /* Unchecked state */
   background-color: #f0f0f0;
   border-color: #ccc;
   outline: none;
 }
 
 .form-check-input:checked {
-  /* Checked state */
   background-color: #9163B3;
   border-color: #6a498a;
 }
 
 .form-check-input:hover {
-  /* Hover state */
-  background-color: #644683;
+  background-color: #6a498a;
   border-color: #432575;
 }
 
 .form-check-input:focus {
+  box-shadow: none; /* Remove blue outline on focus */
   outline-color: #9163B3 !important;
 }
 
 /* link styles */
-.link-style,
-.link-style:hover {
+.link-style, .link-style:hover {
   text-decoration: none !important;
 }
 
@@ -143,84 +135,65 @@ button:focus {
 }
 
 /* logo */
-.logo {
+.logo, .logo-sm {
   width: 75px;
   height: 75px;
   object-fit: contain;
+  opacity: 0.9;
 }
 
 .logo-sm {
   width: 40px;
   height: 40px;
-  object-fit: contain;
-  opacity: 0.9;
 }
 
-/* .logo-loading {
-  width: 450px;
-  height: 450px;
-  object-fit: contain;
-  opacity: 0.1;
-} */
-
 /* Typography */
-h1, h2, h3 {
-  font-family: 'Source Serif 4', serif;
+h1, h2, h3, h4, h5, .form-label {
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
-  color: #3a086b;
 }
 
 h1 {
+  font-family: 'Source Serif 4', serif;
   font-size: 64px;
+  color: #3a086b;
 }
 
 h2 {
+  font-family: 'Source Serif 4', serif;
   font-size: 40px;
   text-align: center;
 }
 
-h3 {
-  font-size: 20px;
-}
-
-p, span {
+h3, p, span {
   font-family: 'Source Serif 4', serif;
   font-size: 18px;
-  color: #000000;
   text-align: justify;
+  color: #000000;
 }
 
-h4, h5, .form-label {
+h4, .form-label {
   font-family: 'Lexend Exa', sans-serif;
-  color: #3a086b;
-}
-
-h4 {
-  font-size: 20px;
-  font-weight: bold;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
+  font-size: 18px;
+  color: #000000;
   letter-spacing: 5px;
 }
 
 h5 {
+  font-family: 'Lexend Exa', sans-serif;
   font-size: 16px;
   font-weight: bolder;
   letter-spacing: 5px;
-}
-
-.form-label {
-  font-size: 16px;
-  font-weight: bold;
+  color: #3a086b;
 }
 
 /* Smaller Text Styles */
-h6, a, li, option, select, button, .small-text, .keywords {
+h6, a, li, option, select, button, .small-text, .keywords, .form-check-label {
   font-family: 'Anonymous Pro', monospace;
-  font-weight: bold;
 }
 
 h6 {
   font-size: 16px;
+  font-weight: bold;
 }
 
 a:focus, a::selection, .btn-link:focus, .btn-link::selection {
@@ -235,8 +208,7 @@ a:focus, a::selection, .btn-link:focus, .btn-link::selection {
 
 /* Responsive Breakpoints */
 @media (max-width: 767px) {
-  .form-control,
-  .btn {
+  .form-control, .btn {
     width: 100%;
   }
 
