--- a/src/styles/admin.css
+++ b/src/styles/admin.css
@@ -6,12 +6,8 @@
     background-color: #ffffff;
 }
 
-#sidebar-title {
-    border-bottom: rgba(58, 8, 107, 0.25) 0.5px solid;
-}
-
 .category-list-item {
-    border-bottom: rgba(58, 8, 107, 0.25) 0.5px solid;
+    border-top: rgba(58, 8, 107, 0.25) 0.5px solid;
     padding: 17px 0;
 }
 
@@ -30,13 +26,12 @@
     border: none;
     background-color: transparent;
     &:hover {
-        background-color: rgba(173, 173, 173, 0.25);
-      }
-    &:active{
+        background-color: rgba(173, 173, 173, 0.10);
+    }
+    &:active {
         border: none;
-        background-color: transparent;
+        background-color: rgba(173, 173, 173, 0.20);
         color: #3A086B;
-        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
     }
 }
 
@@ -49,4 +44,30 @@
 /* Optionally, you can set a background color for the modal overlay */
 .modal-backdrop {
     background-color: rgba(0, 0, 0, 0.5);
+}
+
+/* Close and Save Buttons */
+.close-btn,
+.save-btn {
+    font-size: 16px;
+    font-weight: bold;
+    border-color: none;
+    outline: none;
+}
+
+.close-btn {
+    color: #9163B3;
+    background-color: transparent;
+    &:hover {
+        border-color: #9163B3;
+    }
+}
+
+.save-btn {
+    background-color: #6a498a;
+    border-color: #6a498a;
+    &:hover {
+        background-color: #3A086B;
+        border-color: #3A086B;
+    }
 }
