--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -65,31 +65,6 @@ hr {
   background-color: transparent;
 }
 
-.edit-btn, .save-btn {
-  font-size: 16px;
-  font-weight: bold;
-  color: #ffffff;
-  border-color: transparent;
-}
-
-.edit-btn {
-  background: #9163B3;
-}
-
-.edit-btn:hover {
-  color: #9163B3;
-  background-color: transparent;
-}
-
-.save-btn {
-  background-color: #3A086B;
-}
-
-.save-btn:hover {
-  color: #3A086B;
-  background: transparent;
-}
-
 /* form styles */
 .form-control, .form-selection, select, button {
   border-color: #432575;
@@ -115,6 +90,7 @@ hr {
 .form-check-input:hover {
   background-color: #6a498a;
   border-color: #432575;
+  color: #9163B3;
 }
 
 .form-check-input:focus {
@@ -150,7 +126,7 @@ hr {
 }
 
 /* Typography */
-h1, h2, h3, h4, h5, .form-label {
+h1, h2, h4, h5, .form-label {
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -166,12 +142,14 @@ h2 {
   color: #3a086b;
 }
 
-h3, p, span, .modal-header {
+h3, p, .title, .modal-title {
   font-family: 'Source Serif 4', serif;
+}
+
+h3, p, .title {
   font-size: 18px;
   text-align: justify;
 }
-
 
 h4, .form-label {
   font-family: 'Lexend Exa', sans-serif;
@@ -192,23 +170,27 @@ p {
   margin-bottom: 0;
 }
 
-.subcategory {
-  font-size: 14px;
-  color: #515151;
-}
-
 span, li {
   cursor: pointer;
 }
 
 /* Smaller Text Styles */
-h6, a, li, option, select, button, .small-text, .form-check-label {
+h6, a, li, option, select, button, .small-text, .subcategory, .form-check-label {
   font-family: 'Anonymous Pro', monospace;
 }
 
 h6 {
   font-size: 16px;
   font-weight: bold;
+}
+
+.small-text {
+  font-size: 16px;
+}
+
+.subcategory {
+  font-size: 16px;
+  color: #6f6f6f;
 }
 
 a:focus, a::selection, .btn-link:focus, .btn-link::selection {
