--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -44,18 +44,18 @@ hr {
 
 /* button styles */
 .btn, .btn-link {
-  font-family: 'Anonymous Pro', monospace;
+  font-family: 'Anonymous Pro', monospace !important;
   box-shadow: none;
   width: 200px;
 }
 
 .btn-link {
-  text-decoration: none;
-  color: #6a498a;
+  text-decoration: none !important;
+  color: #6a498a !important;
 }
 
 .btn-link:hover {
-  color: #3A086B;
+  color: #3A086B !important;
 }
 
 .btn-link:focus, .btn-link::selection {
@@ -153,16 +153,18 @@ h3, p, .title {
 
 h4, .form-label {
   font-family: 'Lexend Exa', sans-serif;
+  text-transform: uppercase;
   color: #000000;
   letter-spacing: 5px;
 }
 
 h5 {
   font-family: 'Lexend Exa', sans-serif;
+  color: #3a086b;
   font-size: 16px;
   font-weight: bolder;
   letter-spacing: 5px;
-  color: #3a086b;
+  
 }
 
 p {
