--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -44,18 +44,18 @@ hr {
 
 /* button styles */
 .btn, .btn-link {
-  font-family: 'Anonymous Pro', monospace !important;
+  font-family: 'Anonymous Pro', monospace  ;
   box-shadow: none;
   width: 200px;
 }
 
 .btn-link {
-  text-decoration: none !important;
-  color: #6a498a !important;
+  text-decoration: none  ;
+  color: #6a498a  ;
 }
 
 .btn-link:hover {
-  color: #3A086B !important;
+  color: #3A086B  ;
 }
 
 .btn-link:focus, .btn-link::selection {
@@ -66,11 +66,12 @@ hr {
 }
 
 /* form styles */
-.form-control, .form-selection, select, button {
+.form-control, .form-select, select, button {
   border-color: #432575;
+  /* width: auto; */
 }
 
-.form-control:focus, .form-selection:focus, select:focus, button:focus {
+.form-control:focus, .form-select:focus, select:focus, button:focus {
   border-color: #432575;
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
   outline: none;
@@ -95,21 +96,21 @@ hr {
 
 .form-check-input:focus {
   box-shadow: none; /* Remove blue outline on focus */
-  outline-color: #9163B3 !important;
+  outline-color: #9163B3  ;
 }
 
 /* link styles */
 .link-style, .link-style:hover {
-  text-decoration: none !important;
+  text-decoration: none  ;
 }
 
 .link-style {
-  color: #3a086b !important;
+  color: #3a086b  ;
 }
 
 .link-style:hover {
-  color: #6a498a !important;
-  text-decoration: underline !important;
+  color: #6a498a  ;
+  text-decoration: underline  ;
 }
 
 /* logo */
@@ -126,13 +127,13 @@ hr {
 }
 
 /* Typography */
-h1, h2, h4, h5, .form-label {
+h1, h2, h4, h5 {
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
 }
 
 h1 {
   font-family: 'Source Serif 4', serif;
-  font-size: 64px !important;
+  font-size: 64px  ;
   color: #3a086b;
 }
 
@@ -147,11 +148,11 @@ h3, p, .title, .modal-title {
 }
 
 h3, p, .title {
-  font-size: 18px !important;
+  font-size: 18px  ;
   text-align: justify;
 }
 
-h4, .form-label {
+h4  {
   font-family: 'Lexend Exa', sans-serif;
   text-transform: uppercase;
   color: #000000;
@@ -176,7 +177,7 @@ span, li {
 }
 
 /* Smaller Text Styles */
-h6, a, li, option, select, button, .small-text, .subcategory, .form-check-label {
+h6, a, li, option, select, button, .small-text, .subcategory, .form-check-label, .form-label {
   font-family: 'Anonymous Pro', monospace;
 }
 
@@ -192,6 +193,11 @@ h6 {
 .subcategory {
   font-size: 16px;
   color: #6f6f6f;
+}
+
+.form-label {
+  font-weight: bold;
+  font-size: 20px;
 }
 
 a:focus, a::selection, .btn-link:focus, .btn-link::selection {
