--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -16,7 +16,7 @@
 
 .search-form-control {
   color: #3A086B;
-  background-color: transparent;
+  background-color: #ffffff;
   border: none;
   box-shadow: none;
   width: fit-content;
@@ -25,6 +25,7 @@
 
 .search-form-control:focus {
   box-shadow: none;
+  background-color: #ffffff;
 }
 
 .search-btn {
